modules/gdscript/tests/scripts/analyzer/errors/immutable_inherited_member_attempt_to_modify.gd
extends ImmutableTestObject

func test():
	immutable_member = 0.0
